<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.github.nouish.ezchestshop</groupId>
    <artifactId>ezchestshop-parent</artifactId>
    <version>1.7.3-SNAPSHOT</version>
  </parent>

  <artifactId>ezchestshop-craftbukkit_1_19_R3</artifactId>
  <packaging>jar</packaging>

  <name>EzChestShop NMS 1.19.4</name>
  <description>Easy Chest Shop that any server owner wants that for his/her players</description>

  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot</artifactId>
      <version>1.19.4-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.nouish.ezchestshop</groupId>
      <artifactId>ezchestshop-core</artifactId>
      <version>${project.parent.version}</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>17</release>
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
